# plactice_flutter

./: Makefile  README.md  buf.yaml
bff/: go.mod  go.sum
bff/cmd/: main.go
bff/internal/env/: env.go  env_test.go  envs.go
bff/internal/io_infra/: grpc_server.go
bff/internal/llmClient/: creteaLlmClient.go  llmReq_test.go
bff/internal/service/: chatService.go  genAi.go  llm_test.go
bff/internal/service/langchaingo/: createLLm.go  lang_test.go
bff/internal/service/worker/: llmWokers.go
flutter_application_1/: analysis_options.yaml  pubspec.yaml
flutter_application_1/lib/: main.dart
flutter_application_1/lib/src/states/: all_state.dart  notifer.dart
flutter_application_1/lib/src/tranceport/: trancepot.dart
flutter_application_1/lib/src/widgets/: chatList.dart  chatMessage.dart  inputbox.dart
mcp/EmployeeAccountManager/: go.mod
mcp/EmployeeAccountManager/cmd/: main.go
mcp/EmployeeAccountManager/internal/io_infra/createMs365User/: createMs365User.go
proto/to_client/v1/: buf.gen.client.yaml  to_client.proto
proto/to_llm/v1/: buf.gen.tollm.yaml  to_llm.proto
services/llmServer/: main.py  pyproject.toml  test_main.py
services/llmServer/src/langGraph/ollama/: createOllama.py
services/llmServer/src/server/: factoryApp.py  plan.md
