[project]
name = "llmserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connect-python>=0.5.0",
    "grpcio>=1.75.0",
    "grpcio-reflection>=1.75.0",
    "grpcio-tools>=1.75.0",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "protobuf>=6.32.1",
    "types-protobuf>=6.32.1.20250918",
]
